--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WeChat",
+  "name": "Ensol-WeChat",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "wechat": "^2.1.0"
   }
 }
